administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -55,6 +55,10 @@ button:focus {outline:0;}
 }
 
 [data-view="peopleUsersDetail"], [data-view="communityUsersDetail"] {
+    
+    &.section-padding{
+         margin-bottom: 90px;
+    }
     margin-bottom: 90px;
 }
 
