administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -36,6 +36,10 @@ span.field-value.is-dark {
 }
 
 
+.ui-view[data-view="userProfileDetailProjects"] {
+    margin-top: 60px;
+}
+
 
 .ui-list-view .ui-view.section-module{
     
