administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -13,7 +13,7 @@ span.field-value.is-dark {
 
 
 
-[data-view="userProfileDetailOverview"]{
+[data-view="userProfileDetailView"]{
     
     
         
