administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -21,6 +21,10 @@ span.field-value.is-dark {
         display:none;
     }
     
+    .user-name {
+        display: none;
+    }
+    
         
     
 }
