administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -19,7 +19,7 @@ span.field-value.is-dark {
 }
 
 
-.card-two .ui-view.user-detail.just-pic, .card-three .ui-view.user-detail.just-pic {
+.card-two .ui-view.user-detail.just-pic, .card-three .ui-view.user-detail.just-pic, .card-four .ui-view.user-detail.just-pic {
     display: none;
 }
  .ui-view.card-two, .ui-view.card-three, .ui-view.card-four{
