administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -26,6 +26,14 @@ span.field-value.is-dark {
     width: 300px;
 }
 
+
+.ui-view.card-two, .ui-view.card-three,  .ui-view.card-three, .ui-view.card-four{
+    background: white;
+    margin: 10px;
+    padding:10px;
+    border-radius: 8px;
+}
+
 [data-view="userProfileDetailView"]{
     
     
