administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -34,6 +34,15 @@ span.field-value.is-dark {
     border-radius: 8px;
 }
 
+
+.card-one .field-value-module, .card-one .project-description {
+    display: none;
+
+}
+.ui-view.card-one {
+    width: 300px;
+}
+
 [data-view="userProfileDetailView"]{
     
     
