administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -117,6 +117,14 @@ button:focus {outline:0;}
     
 }
 
+ .dark [data-view="userProfileDetailCards"]{ 
+    [data-view="userProfileDetailCards"]{
+        .ui-view.profile-card{
+             background: #2E303A;
+        }
+    }
+ }
+
 
 
 
