--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -77,6 +77,7 @@ button:focus {outline:0;}
         .ui-view.profile-card{
             display: inline-block;
             width: 600px;
+            vertical-align: top;
         }
     
     
@@ -105,6 +106,15 @@ button:focus {outline:0;}
             .field-value-module, .project-description {
                 display: none;
             }
+            
+            
+            background: none;
+            width: unset;
+            
+            
+            .single_ImageContainer {
+                margin-top: 0;
+            
         
         }
        
