administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -114,6 +114,7 @@ button:focus {outline:0;}
             
             .single_ImageContainer {
                 margin-top: 0;
+            }
             
         
         }
