administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -92,7 +92,7 @@ button:focus {outline:0;}
         
         
         .ui-view.profile-card{
-            background: red;
+            background: white;
             margin: 10px;
             padding:10px;
             border-radius: 8px;
